manifests/media/prowlarr/deployment.yaml
apiVersion: apps/v1 
kind: Deployment
metadata:
  name: prowlarr
  labels:
    app: prowlarr
spec:
  revisionHistoryLimit: 1
  replicas: 1
  selector:
    matchLabels:
      app: prowlarr
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: prowlarr
    spec:
      containers:
      - image: lscr.io/linuxserver/prowlarr:2.5.2
        name: prowlarr
        volumeMounts:
        - name: storage
          mountPath: /config
          subPath: prowlarr/config
        ports:
        - containerPort: 9696
        resources:
          limits:
            cpu: "1"
            memory: 512Mi
            ephemeral-storage: 64Mi
          requests:
            cpu: 100m
            memory: 128Mi
      volumes:
        - name: storage
          persistentVolumeClaim:
            claimName: media-nfs
